# rusty_api

./: .gitignore  Cargo.toml  sqlite.db
src/: app_state.rs  main.rs
src/api/: mod.rs  swagger.rs
src/api/routes/: auth.rs  bulk.rs  employees.rs  mod.rs
src/domain/: config.rs  errors.rs  mod.rs  models.rs  ports.rs
src/infra/email/: brevo.rs  mod.rs  smtp.rs
