[package]
name = "rusty_api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart"] }
csv = "1.4.0"
dotenvy = "0.15.7"
envconfig = "0.11.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lettre = "0.11.21"
moka = { version = "0.12.15", features = ["future"] }
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-rustls", "macros", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
